2012-11-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Truncate requested column number to maximum sane
	value. This prevents a segfault on "plot $foo using 1 title column(999)"

2012-11-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (plotrequest):  Fix bug introduced by 2012-11-12 patch
	(failure to recognize nonparametric named variables).

	* src/graphics.c (boundary): Since the vertical height of each text
	element depends on the font it uses, temporarily set the font while 
	calculating the height of that element.  This can result in a different
	placement compared to previous versions when a non-default font is used.

	* demo/named_var.dem demo/rugplot.dem demo/all.dem demo/simple.dem:
	Add a unit test for the use of a nonparametric named variable;
	it would have caught the above named variable bug!
	Add a title to simple.dem illustrating the effect of font size on
	placement.  Add a rugplot demo.  Less screen output from fit demo.

2012-11-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Fix the hexadecimal format used to output RGB color

	* term/js/canvasmath.js:  Additional UTF-8 mathematical operators

	* term/canvas.trm:  Retain the initial font size for later use.
	Reset dashed line status before filled box or polygon (not sure why
	this is necessary, but omitting it causes strange things to happen).

	* src/gplt_x11.c:  Depending on the order of linetype changes, the
	code could fail to reset the current linewidth.
	Bug #3348942

2012-11-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/fit.c src/plot2d.c src/plot3d.c:
	Merge parse_range() and parse_named_range() into a single routine.
	Clean up the code and the call sites.

	* src/datafile.c (plot_option_using):  Restore a check for a format 
	spec given after the list of columns (e.g. plot XX using 1:2 "%lf; %lf")
	that was lost in a code reorganization and missing in 4.6.0 and 4.6.1.
	Bug #3586441
